--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -1,52 +1,68 @@
-
-
-      <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-        <div class="my-auto">
+{{ $escapedEmail := replace .Site.Params.email "@" "<span>@</span>" }}
+{{ $escapedMailto := printf "%s-remove-%s" (substr .Site.Params.email 0 5) (substr .Site.Params.email 5) }}
+{{ $escapedMailto = replace $escapedMailto "@" "[@]" }}
+      <section class="about-me p-3 p-lg-5 d-flex d-column" id="about">
+        <div class="my-auto w-100">
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="mr-auto">
 
-              <h1 class="mb-0">{{ .Site.Params.firstName }}
-                <span class="text-primary">{{ .Site.Params.lastName }}</span>
+              <h1 class="text-primary mb-0">
+                <span class="text-primary">{{ .Site.Params.firstName }}</span>
+                <br class="d-block d-lg-none" />
+                <span class="emphasize">{{ .Site.Params.lastName }}</span>
               </h1>
-              <div class="subheading mb-5">{{ .Site.Params.address }} ·
-                <a href="mailto:{{ substr .Site.Params.email 0 5}}-remove-{{ substr .Site.Params.email 5 }}">{{ substr .Site.Params.email 0 5}}<span style="display:none">-remove-</span>{{ substr .Site.Params.email 5 }}</a>
+              <div class="subheading mb-5">
+                <span class="address">{{ .Site.Params.address }}</span>
+                <span class="divider">&middot;</span>
+                <span class="email">
+                  <a href="mailto:{{ $escapedMailto }}">{{ $escapedEmail | safeHTML }}</a>
+                </span>
               </div>
 
             </div>
-
             {{ if .Site.Params.showQr }}
-              {{ partial "contact-qr" . }}
+            <div class="d-none d-lg-block text-center">
+              {{ partial "elements/qr-code" (dict "contact" .Site.Params "siteUrl" .Site.BaseURL "chartSize" "150x150") }}
+              <h4 class="mb-3">{{ i18n "contact-card" }}</h4>
+            </div>
             {{ end }}
-
         </div>
-        <div>
+        {{ if .Site.Params.showQr }}
+        <div class="qr-code-container d-block d-lg-none">
+          <h3 class="mb-3">{{ i18n "contact-card" }}</h3>
+          {{ partial "elements/qr-code" (dict "contact" .Site.Params "siteUrl" .Site.BaseURL "chartSize" "200x200") }}
+        </div>
+        {{ end }}
+        <div class="content">
           {{ .Content }}
-          {{ if .Site.Params.showCertifications }}
+        </div>
+        {{ if and (isset .Site.Data "certifications") (len .Site.Data.certifications) }}
+        <div class="certification-icons">
           <h3>{{ i18n "certifications" }}</h3>
-          <ul class="list-inline list-social-icons mb-0">
-            {{ range .Site.Data.certifications }}
-                <li class="list-inline-item">
-                  <a href="{{ .proof }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me">
-                    <img src="{{ .badge }}" width=75 />
-                  </a>
-                </li>
+          <ul class="list-certification-icons list-inline d-flex mb-0">
+          {{ range .Site.Data.certifications }}
+            {{ $href := .href | default "#about" }}
+            {{ $target := cond (eq $href "#about") "" "_target" }}
+
+            <li class="list-inline-item">
+              {{- if .icon -}}
+              <a href="{{ $href }}" class="certification-icon btn btn-lrg d-flex align-items-center justify-content-center" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me" target="{{ $target }}">
+                <img src="{{ .icon }}" alt="{{ .name }}" />
+              </a>
+              {{- else -}}
+              <a href="{{ $href }}" class="certification-icon unknown btn btn-lrg d-flex align-items-center justify-content-center" data-toggle="tooltip" title="{{ .name }}" data-offset="0 10" rel="me" target="{{ $target }}">
+                <span><i class="fa fa-question"></i></span>
+              </a>
+              {{- end -}}
+            </li>
             {{ end }}
           </ul>
-          {{ end }}
-          {{ if .Site.Params.showSocializations }}
-          <h3>{{ i18n "socialization" }}</h3>
-          <ul class="list-inline list-social-icons mb-0">
-            {{ range .Site.Params.handles }}
-                <li class="list-inline-item">
-                  <a href="{{ .link }}" data-toggle="tooltip" title="{{ .name }}" data-offset="0,10" rel="me">
-                    <span class="fa-stack fa-lg">
-                      <i class="fa fa-circle fa-stack-2x"></i>
-                      <i class="fab {{ if .icon}}fa-{{ .icon }}{{ else }}fa-{{ lower .name }}{{ end }} fa-stack-1x fa-inverse"></i>
-                    </span>
-                  </a>
-                </li>
-            {{ end }}
-          </ul>
+        </div>
+        {{ end }}
+        <div class="social-icons">
+          {{ if and (isset .Site.Params "social") (len .Site.Params.social) }}
+          <h3 class="mb-3">{{ i18n "socialization" }}</h3>
+          {{ partial "elements/social-icons-list.html" .Site.Params.social }}
           {{ end }}
         </div>
       </div>
