--- a/layouts/partials/portfolio/education.html
+++ b/layouts/partials/portfolio/education.html
@@ -1,18 +1,22 @@
-        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-          <div class="my-auto">
-          <h2 class="mb-5">{{ i18n "education" }}</h2>
-            {{ range .Site.Data.education }}
-              <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                <div class="resume-content mr-auto">
-                  <h3 class="mb-0">{{ .school | markdownify }}</h3>
-                  <div class="subheading mb-3">{{ .degree }}</div>
-                  <div>{{ .major | markdownify }}</div>
-                  <p>{{ .notes | markdownify }}
-                </div>
-                <div class="resume-date text-md-right">
-                  <span class="text-primary">{{ .range }}</span>
-                </div>
-              </div>
-              {{ end }}
-           </div>
-        </section>
+<section class="education p-3 p-lg-5 d-flex flex-column my-auto w-100" id="education">
+  <div class="my-auto w-100">
+    <h2 class="mb-4">{{ i18n "education" }}</h2>
+    {{ range .Site.Data.education }}
+    <div class="item mb-5 p-3">
+      <div class="d-flex flex-column flex-md-row justify-content-between">
+        <div class="content mr-auto m-0" >
+          <h3 class="emphasize m-0">{{ .school | markdownify }}</h3>
+          <div class="subheading m-0">{{ .degree }}</div>
+        </div>
+        <div class="date text-secondary text-md-right">
+          <span>{{ .range }}</span>
+        </div>
+      </div>
+      <div class="col mt-3">
+        <div>{{ .major | markdownify }}</div>
+        <p>{{ .notes | markdownify }}
+      </div>
+    </div>
+    {{ end }}
+  </div>
+</section>
