--- a/layouts/partials/portfolio/skills.html
+++ b/layouts/partials/portfolio/skills.html
@@ -1,28 +1,17 @@
-<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-  <div class="my-auto" id="skills-content">
-  <h2 class="mb-5">{{ i18n "skills" }}</h2>
+<section class="skills p-3 p-lg-5 d-flex flex-column" id="skills">
+  <div class="my-auto w-100">
+    <h2 class="mb-4">{{ i18n "skills" }}</h2>
+    {{ $devicons := $.Site.Data.devicons }}
     {{ range $.Site.Data.skills }}
         <div class="subheading mb-3 skills-heading">{{ .grouping }}</div>
-            <ul>
+            <ul class="list-inline skills-list">
             {{ range .skills }}
-                {{ if isset . "name" }}
-                    {{ $devicon := cond (in $.Site.Data.devicons (lower .icon)) (lower .icon) (cond (in $.Site.Data.devicons (lower .name)) (lower .name) "terminal_badge") }}
-                    <li class="list-inline-item">
-                      <i class="devicons devicons-{{ $devicon }}"></i>
-                      {{if isset . "link"}}
-                          <a href="{{.link}}">{{ .name }}</a>
-                      {{ else }}
-                          {{ .name }}
-                      {{ end }}
-                    </li>
-                {{ else }}
-                  <li class="list-inline-item">
-                    <i class="devicons devicons-{{ cond (in $.Site.Data.devicons (lower .)) (lower .) "terminal_badge" }}"></i>
-                    {{ . }}
-                  </li>
-                {{ end }}
+                <li class="list-icon-item list-inline-item">
+                    {{ partial "elements/skill.html" (dict "skill" . "devicons" $devicons) }}
+                </li>
             {{ end }}
             </ul>
     {{ end }}
   </div>
 </section>
+
