--- a/layouts/partials/portfolio/skills.html
+++ b/layouts/partials/portfolio/skills.html
@@ -1,9 +1,10 @@
 <section class="skills p-3 p-lg-5 d-flex flex-column" id="skills">
-  <div class="my-auto w-100">
-    <h2 class="mb-4">{{ i18n "skills" }}</h2>
-    {{ $devicons := $.Site.Data.devicons }}
-    {{ range $.Site.Data.skills }}
-        <div class="subheading mb-3 skills-heading">{{ .grouping }}</div>
+    <div class="my-auto w-100">
+        <h2 class="mb-4">{{ i18n "skills" }}</h2>
+        {{ $devicons := $.Site.Data.devicons }}
+        {{ range $.Site.Data.skills }}
+        <div class="item col">
+            <div class="subheading mb-3 skills-heading">{{ .grouping }}</div>
             <ul class="list-inline skills-list">
             {{ range .skills }}
                 <li class="list-icon-item list-inline-item">
@@ -11,7 +12,7 @@
                 </li>
             {{ end }}
             </ul>
-    {{ end }}
-  </div>
+        </div>
+        {{ end }}
+    </div>
 </section>
-
